add creat course functionality

--- a/training_app/templates/training_app/add_course.html
+++ b/training_app/templates/training_app/add_course.html
@@ -6,7 +6,8 @@
     <h1 style = "text-align: center;">Add-Course</h1>
 
     <div class="container">
-        <form>
+        <form method="POST">
+            {% csrf_token %}
             <div class="form-group">
               <label for="title">Title</label>
               <input type="text" class="form-control" id="title" name="title">
