--- a/training_app/templates/training_app/courses.html
+++ b/training_app/templates/training_app/courses.html
@@ -3,35 +3,44 @@
 {% block title %} courses {% endblock title %}
 
 {% block heading %}
-    <h1 style = "text-align: center;">I am heading page of couse page</h1>
+    <h1 style = "text-align: center;">Courses</h1>
 
-    {% for course in courses %}
+    {% if courses %}
 
-        <div class="container">
+        {% for course in courses %}
+            <div class="container">
             <div class="card">
-                <div class="card-body">
+            <div class="card-body">
+                <h3>{{course.id}}</h3>
                 <h5 class="card-title">{{course.title}}</h5>
                 <p class="card-text">{{course.description}}</p>
                 <p class="card-text">{{course.duration}}</p>
                 <p class="card-text">{{course.price}}</p>
                 <p class="card-text">{{course.level}}</p>
 
-                <a href="#" class="btn btn-primary">Apply</a>
-                </div>
+            <a href="{% url 'training-edit' id=course.id %}" class="btn btn-primary">Edit</a>
+            <a href="{% url 'training-delete' id=course.id %}" class="btn btn-danger">Delete</a>
             </div>
+            </div>
+            </div>
+            <!-- <div class="card text-center">
+        <div class="card-header">
         </div>
-        <!-- <div class="card text-center">
-            <div class="card-header">
-            </div>
-            <div class="card-body">
-            <h5 class="card-title">{{class.title}}</h5>
-            <p class="card-text">Instructor - {{class.instructor}}</p>
-            <p class="card-text">Fee - {{class.fees}}</p>
-            <p class="card-text">Instructor - {{class.duration}}</p>
-            <p class="card-text">Insstructor - {{class.start_date}}</p>
-            </div>
-        </div> -->
-    {% endfor %}
+        <div class="card-body">
+        <h5 class="card-title">{{class.title}}</h5>
+        <p class="card-text">Instructor - {{class.instructor}}</p>
+        <p class="card-text">Fee - {{class.fees}}</p>
+        <p class="card-text">Instructor - {{class.duration}}</p>
+        <p class="card-text">Insstructor - {{class.start_date}}</p>
+        </div>
+    </div> -->
+        {% endfor %}
+    
+    {% else %}
+        <h1>There is no data to display</h1>
+    {% endif %}
+    
+  
 
     <div style = "text-align: center;">
         <a href="{% url 'training-add-course'%}" class="btn btn-primary">Add Course</a>
